--- a/RouletteGameApi/appsettings.json
+++ b/RouletteGameApi/appsettings.json
@@ -3,7 +3,8 @@
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "RouletteGame",
     "CollectionName": "Roulettes",
-    "ApiToken": "gustavo_adolfo_gomez_acevedo_@2021"
+    "ApiToken": "gustavo_adolfo_gomez_acevedo_@2021",
+    "TokenExpirationDaysTime": "1"
   },
   "Logging": {
     "LogLevel": {
