--- a/RouletteGameApi/.vscode/launch.json
+++ b/RouletteGameApi/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceFolder}/bin/Debug/net6.0/BooksApi.dll",
+            "program": "${workspaceFolder}/bin/Debug/net6.0/RouletteGameApi.dll",
             "args": [],
             "cwd": "${workspaceFolder}",
             "stopAtEntry": false,
